# dotenvpull

./: readme.md
backend/: Cargo.toml  Dockerfile  docker-compose.yml  readme.md
backend/src/: main.rs
cli/: .gitignore  Cargo.toml
cli/src/: cli.rs  config.rs  crypto.rs  main.rs  utils.rs
cli/src/api/: delete.rs  mod.rs  pull.rs  push.rs  share.rs  update.rs
